rgw: fix user stats iterative increment

The RGWBucketCtl::sync_user_stats() function can increment or reset the
stats [1][2]

[1]https://github.com/ceph/ceph/blob/master/src/rgw/rgw_bucket.cc#L3745
[2]https://github.com/ceph/ceph/blob/master/src/rgw/services/svc_bi_rados.cc#L379-L381

fixes: https://tracker.ceph.com/issues/46400

Signed-off-by: Mark Kogan <mkogan@redhat.com>